Fixed tap-and-holding the canvas on mobile can highlight/callout it; Fixed mouse tracking didn't work on mobile; Made controls bigger in paint example

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,12 @@ html, body, canvas {
 }
 
 canvas {
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-touch-callout: none;
   background-color: #FFFFFF;
   border: 1px solid black;
   display: block;
